examples/test/testpolicy6574.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6574
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key1: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value16
      podSelector:
        matchLabels:
          key8: value23
          key36: value23
          key15: value46
